[gd_scene load_steps=4 format=3 uid="uid://1b0dhe4p36pa"]

[ext_resource type="Texture2D" uid="uid://d3ahvgi4j6830" path="res://graphics/progress_circle.png" id="1"]
[ext_resource type="Script" path="res://rythm_game/note_drawers/NoteTarget.gd" id="2"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(64, 64)

[node name="NoteTarget" type="Node2D"]
script = ExtResource("2")

[node name="TimingArm2" type="Sprite2D" parent="."]
offset = Vector2(0, -31)

[node name="Node2D" type="Node2D" parent="."]

[node name="TextureRect" type="TextureProgressBar" parent="Node2D"]
offset_left = -128.0
offset_top = -128.0
offset_right = 128.0
offset_bottom = 128.0
mouse_filter = 2
max_value = 1.0
step = 0.0
fill_mode = 4
texture_progress = ExtResource("1")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="HoldTextSprite" type="Sprite2D" parent="Sprite2D"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("1")

[node name="TimingArm" type="Sprite2D" parent="."]
offset = Vector2(0, -31)
